[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webex-email-reminders"
version = "0.4.0"
description = "CLI tool that monitors Webex mentions and DMs, sends email summaries via Nylas"
keywords = ["webex", "email", "reminders", "nylas", "notifications", "cli"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nylas==6.2.0",
    "requests==2.32.3",
]

[project.scripts]
webex-reminders = "webex_reminders:main"
webex-email-reminders = "webex_reminders:main"
